fix(css): right aligns jumpers

--- a/assets/css/default.sass
+++ b/assets/css/default.sass
@@ -57,7 +57,10 @@ iframe
 
 // better spacing in footnotes
 .footnotes p
+	position: relative
 	margin: 0
 
 // spacing
-// .reversefootnote
+.reversefootnote
+	position: absolute
+	right: 0
